--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" value="wss://relay.damus.io,wss://nos.lol" />
+    <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co"/>
     <input id="author" placeholder="著者pubkey(HEX, 任意)" />
     <select id="kind">
       <option value="1" selected>kind:1（テキスト）</option>
