--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input id="author" placeholder="著者pubkey(HEX, 任意)" />
     <select id="kind">
       <option value="1" selected>kind:1（テキスト）</option>
-      <option value="6">kind:6（Repost）</option>
+      <option value="6">kind:6（リポスト）</option>
     </select>
     <button id="btnConnect" class="ghost">接続</button>
     <div class="status" id="status">未接続</div>
@@ -31,7 +31,7 @@
       <div class="composer">
         <div class="row">
           <button id="btnMe" class="ghost">私のpubkey取得</button>
-          <small class="hint">ブラウザ拡張（例: nos2x、Alby等）が必要</small>
+          <small class="hint">NIP-07拡張が必要</small>
         </div>
         <textarea id="compose" placeholder="縦書きで表示されます。ここに本文…"></textarea>
         <div class="row">
