--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <h1>ここにタイトルを表示</h1>
     <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co"/>
     <input id="author" placeholder="著者pubkey(HEX, 任意)" />
     <select id="kind">
