--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <section class="timeline-wrap">
       <div id="timeline" class="vertical-timeline empty">
         購読するとここに縦書きでノートが並びます
+　　　  <div class="note">
+　　    <div class="content">投稿本文</div>
+   　　 <div class="meta">日時とか</div>
+  <!-- さらにノートが続く -->
       </div>
     </section>
   </main>
