--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
 　　    <div class="content">投稿本文</div>
    　　 <div class="meta">日時とか</div>
   <!-- さらにノートが続く -->
+       <section class="timeline-controls">
+  <button id="scrollLeft">◀</button>
+  <button id="scrollRight">▶</button>
+</section>
+
+<section class="timeline-wrap">
+  <div id="timeline" class="vertical-timeline empty">
+    <!-- 投稿がここに並ぶ -->
+  </div>
+</section>
+
       </div>
     </section>
   </main>
