--- a/index.html
+++ b/index.html
@@ -34,41 +34,27 @@
       </div>
     </aside>
 
+    <!-- タイムライン操作ボタン -->
+    <section class="timeline-controls">
+      <button id="scrollLeft">◀</button>
+      <button id="scrollRight">▶</button>
+    </section>
+
+    <!-- タイムライン本体 -->
     <section class="timeline-wrap">
       <div id="timeline" class="vertical-timeline empty">
         購読するとここに縦書きでノートが並びます
-　　　  <div class="note">
-　　    <div class="content">投稿本文</div>
-   　　 <div class="meta">日時とか</div>
-  <!-- さらにノートが続く -->
-<section class="timeline-controls">
-  <button id="scrollLeft">◀</button>
-  <button id="scrollRight">▶</button>
-</section>
-
-<section class="timeline-wrap">
-  <div id="timeline" class="vertical-timeline empty">
-    <!-- 投稿がここに並ぶ -->
-  </div>
-</section>
-
-  </div>
-</section>
-
-</section>
-
-<section class="timeline-wrap">
-  <div id="timeline" class="vertical-timeline empty">
-    <!-- 投稿がここに並ぶ -->
-  </div>
-</section>
-
+        <div class="note">
+          <div class="content">投稿本文</div>
+          <div class="meta">日時とか</div>
+        </div>
+        <!-- さらにノートが続く -->
       </div>
     </section>
   </main>
 
   <footer>
-        <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co"/>
+    <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co"/>
     <input id="author" placeholder="著者pubkey(HEX, 任意)" />
     <select id="kind">
       <option value="1" selected>kind:1（テキスト）</option>
@@ -83,3 +69,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
