--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <input id="limit" type="number" min="1" max="200" value="50" />
         <button id="btnSubscribe">購読/更新</button>
       </div>
-      <small>author空→全体。authorにHEXを入れるとその著者の投稿のみ。</small>
-
+      
       <h2>投稿（NIP-07拡張が必要）</h2>
       <div class="composer">
         <div class="row">
@@ -62,8 +61,9 @@
     </select>
     <button id="btnConnect" class="ghost">接続</button>
     <div class="status" id="status">未接続</div>
-    <div>縦書きミニNostrクライアント / NIP-01 & NIP-07（任意）</div>
-    <div>MITライセンス・自己責任でご利用ください</div>
+    <div>縦書きミニNostrクライアント</div>
+    <div>MITライセンス・使用は自己責任</div>
+    <div class="copylight">Inverted.triangle358 © 2025</div>
   </footer>
 
   <script src="app.js"></script>
