--- a/index.html
+++ b/index.html
@@ -11,46 +11,32 @@
     <h1>ここにタイトルを表示</h1>
   </header>
 
-  <main>
-    <aside class="sidebar">
-      <h2>購読</h2>
+<main>
+  <!-- 投稿欄（左カラム固定） -->
+  <aside class="sidebar">
+    <h2>投稿</h2>
+    <div class="composer">
+      <textarea id="compose" placeholder="縦書きで本文…"></textarea>
       <div class="row">
-        <input id="limit" type="number" min="1" max="200" value="50" />
-        <button id="btnSubscribe">購読/更新</button>
+        <button id="btnPublish">投稿</button>
+        <small id="postHint"></small>
       </div>
-      
-      <h2>投稿（NIP-07拡張が必要）</h2>
-      <div class="composer">
-        <div class="row">
-          <button id="btnMe" class="ghost">私のpubkey取得</button>
-          <small class="hint">NIP-07拡張が必要</small>
-        </div>
-        <textarea id="compose" placeholder="縦書きで表示されます。ここに本文…"></textarea>
-        <div class="row">
-          <button id="btnPublish" class="primary">投稿</button>
-          <small class="hint" id="postHint"></small>
-        </div>
-      </div>
-    </aside>
+    </div>
+  </aside>
 
-    <!-- タイムライン操作ボタン -->
-    <section class="timeline-controls">
-      <button id="scrollLeft">◀</button>
-      <button id="scrollRight">▶</button>
-    </section>
+  <!-- スクロールボタン -->
+  <section class="timeline-controls">
+    <button id="scrollLeft">◀</button>
+    <button id="scrollRight">▶</button>
+  </section>
 
-    <!-- タイムライン本体 -->
-    <section class="timeline-wrap">
-      <div id="timeline" class="vertical-timeline empty">
-        購読するとここに縦書きでノートが並びます
-        <div class="note">
-          <div class="content">投稿本文</div>
-          <div class="meta">日時とか</div>
-        </div>
-        <!-- さらにノートが続く -->
-      </div>
-    </section>
-  </main>
+  <!-- タイムライン -->
+  <section class="timeline-wrap">
+    <div id="timeline" class="vertical-timeline empty">
+      <!-- 投稿カードがここに追加される -->
+    </div>
+  </section>
+</main>
 
   <footer>
     <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co"/>
