--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <header>
     <h1>ここにタイトルを表示</h1>
   </header>
-
-<main>
-  <!-- 投稿欄（左カラム固定） -->
+  
+  <main>
+  <!-- 投稿欄（左固定カラム） -->
   <aside class="sidebar">
     <h2>投稿</h2>
     <div class="composer">
