--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <option value="1" selected>kind:1（テキスト）</option>
       <option value="6">kind:6（リポスト）</option>
     </select>
+    <button id="btnSubscribe">購読/更新</button>
     <button id="btnConnect" class="ghost">接続</button>
     <div class="status" id="status">未接続</div>
     <div>縦書きミニNostrクライアント</div>
