--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
   </section>
 </main>
 
-  <footer>
-    <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co"/>
-    <input id="author" placeholder="著者pubkey(HEX, 任意)" />
-    <select id="kind">
-      <option value="1" selected>kind:1（テキスト）</option>
-      <option value="6">kind:6（リポスト）</option>
-    </select>
-    <button id="btnSubscribe">購読/更新</button>
-    <button id="btnConnect" class="ghost">接続</button>
-    <div class="status" id="status">未接続</div>
-    <div>縦書きミニNostrクライアント</div>
-    <div>MITライセンス・使用は自己責任</div>
-    <div class="copylight">Inverted.triangle358 © 2025</div>
-  </footer>
+<footer>
+  <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" 
+    value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co" />
 
-  <script src="app.js"></script>
-</body>
-</html>
+  <input id="author" placeholder="著者pubkey(HEX, 任意)" />
+
+  <select id="kind">
+    <option value="1" selected>kind:1（テキスト）</option>
+    <option value="6">kind:6（リポスト）</option>
+  </select>
+
+  <button id="btnSubscribe">購読/更新</button>
+  <button id="btnConnect" class="ghost">接続</button>
+
+  <div class="status" id="status">未接続</div>
+  <div>縦書きミニNostrクライアント</div>
+  <div class="copylight">Inverted.triangle358 © 2025</div>
+</footer>
 
