--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
   <div class="status" id="status">未接続</div>
   <div>縦書きミニNostrクライアント</div>
   <div class="copylight">Inverted.triangle358 © 2025</div>
+  <script src="app.js"></script>
 </footer>
 
