--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>ここにタイトルを表示</h1>
+    <h1 class="sawarabi-mincho-regular">ここにタイトルを表示</h1>
   </header>
   
   <main>
