--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
   
   <main>
   <!-- 投稿欄（左固定カラム） -->
-  <aside class="sidebar">
-    <h2>投稿</h2>
-    <div class="composer">
-      <textarea id="compose" placeholder="縦書きで本文…"></textarea>
-      <div class="row">
-        <button id="btnPublish">投稿</button>
-        <small id="postHint"></small>
-      </div>
+<aside class="sidebar">
+  <div class="sidebar-header">
+    <h2>投稿欄</h2>
+    <button id="btnPublish">投稿する</button>
+  </div>
+  <div class="composer">
+    <textarea id="compose" placeholder="縦書きで本文…"></textarea>
+    <div class="row">
+      <small id="postHint"></small>
     </div>
-  </aside>
+  </div>
+</aside>
+
 
   <!-- スクロールボタン -->
   <section class="timeline-controls">
