--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <button id="btnPublish">投稿する</button>
   </div>
   <div class="composer">
-    <textarea id="compose" placeholder="縦書きで本文…"></textarea>
+    <textarea id="compose" placeholder="本文を入力......"></textarea>
     <div class="row">
       <small id="postHint"></small>
     </div>
