--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="status" id="status">未接続</div>
       <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" 
-    value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co" />
+    value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co,wss://yabu.me,wss://lang.relays.land/ja" />
   </header>
   
   <main>
