--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1 class="sawarabi-mincho-regular">ここにタイトルを表示</h1>
+    <h1 class="sawarabi-mincho-regular">野雨-Nosame-</h1>
   <div class="status" id="status">未接続</div>
       <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" 
     value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co,wss://yabu.me,wss://lang.relays.land/ja" />
