--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>サンプルNostrクライアント</title>
+  <title>野雨-Nosame-</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1 class="sawarabi-mincho-regular">野雨-Nosame-</h1>
+    <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
   <div class="status" id="status">未接続</div>
       <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" 
     value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co,wss://yabu.me,wss://lang.relays.land/ja" />
