--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </main>
 
 <footer>
-  <div class="copylight">Inverted.triangle358 © 2025</div>
+  <div class="copylight">inverted.triangle358 © 2025</div>
   <script src="app.js"></script>
 </footer>
 
