--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <textarea id="compose" placeholder="本文を入力......"></textarea>
     <div class="row">
       <small id="postHint"></small>
+      <div class="composer">
+  <textarea id="compose"></textarea>
+  <div id="charCount">0 / 40</div>
+</div>
+
     </div>
   </div>
 </aside>
