--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
   </div>
   <div class="composer">
     <textarea id="compose" placeholder="本文を入力......"></textarea>
+    <small id="charCount" style="position:absolute; bottom:5px; right:8px; font-size:0.8em; color:#333;">
+      0 / 40
     <div class="row">
-      <small id="postHint"></small>
-      <div class="composer">
-  <textarea id="compose"></textarea>
-  <div id="charCount">0 / 40</div>
 </div>
 
     </div>
