--- a/index.html
+++ b/index.html
@@ -25,17 +25,13 @@
   <div class="sidebar-header">
     <button id="btnPublish">投稿する</button>
   </div>
-  <div class="composer">
+  <div class="composer" style="position: relative;">
     <textarea id="compose" placeholder="本文を入力......"></textarea>
     <small id="charCount" style="position:absolute; bottom:5px; right:8px; font-size:0.8em; color:#333;">
       0 / 40
-    <div class="row">
-</div>
-
-    </div>
+    </small>
   </div>
 </aside>
-
 
   <!-- スクロールボタン -->
   <section class="timeline-controls">
