--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
 </head>
 <body>
   <header>
-    <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
-    <div class="status" id="status">未接続</div>
-    <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" 
-      value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co,wss://yabu.me,wss://lang.relays.land/ja" />
-    <button id="btnConnect" class="ghost">接続</button>
-    <button id="btnSubscribe">購読/更新</button>
+  <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
+  <div class="status" id="status">未接続</div>
+
+  <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" 
+    value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co,wss://yabu.me,wss://lang.relays.land/ja" />
+  <button id="btnConnect" class="ghost">接続</button>
+  <button id="btnSubscribe">購読/更新</button>
+
+  <!-- リレー一覧モーダルを開くボタン -->
+  <button id="openRelays">リレー一覧</button>
+</header>
+
+<!-- モーダル本体 -->
+<div id="relayModal" class="modal">
+  <div class="modal-content">
+    <span id="closeRelays" class="close">&times;</span>
+    <h2>接続リレー</h2>
+    <div id="relayList"></div>
+  </div>
+</div>
+
   </header>
   
   <main>
