--- a/index.html
+++ b/index.html
@@ -11,40 +11,24 @@
 </head>
 <body>
   <header>
-  <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
-  <div class="status" id="status">未接続</div>
-
-  <input id="relay" placeholder="Relay: wss://relay.example (複数はカンマ)" 
-    value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co,wss://yabu.me,wss://lang.relays.land/ja" />
-  <button id="btnConnect" class="ghost">接続</button>
-  <button id="btnSubscribe">購読/更新</button>
-
-  <!-- リレー一覧モーダルを開くボタン -->
-  <button id="openRelays">リレー一覧</button>
-</header>
-
-<!-- モーダル本体 -->
-<div id="relayModal" class="modal">
-  <div class="modal-content">
-    <span id="closeRelays" class="close">&times;</span>
-    <h2>接続リレー</h2>
-    <div id="relayList"></div>
-  </div>
-</div>
-
+    <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
+    <div class="status" id="status">未接続</div>
+    <input id="relay" placeholder="Relay: wss://..." 
+      value="wss://relay-jp.nostr.wirednet.jp,wss://r.kojira.io,wss://relay.barine.co,wss://yabu.me,wss://lang.relays.land/ja" />
+    <button id="btnConnect" class="ghost">接続</button>
+    <button id="btnSubscribe">購読/更新</button>
+    <button id="btnRelayList">リレー一覧</button>
   </header>
   
   <main>
-    <!-- 投稿欄（左固定カラム） -->
+    <!-- 投稿欄 -->
     <aside class="sidebar">
       <div class="sidebar-header">
         <button id="btnPublish">投稿する</button>
       </div>
-      <div class="composer" style="position: relative;">
+      <div class="composer">
         <textarea id="compose" placeholder="本文を入力......"></textarea>
-        <small id="charCount" style="position:absolute; bottom:5px; right:8px; font-size:0.8em; color:#333;">
-          0 / 40
-        </small>
+        <small id="charCount">0 / 40</small>
       </div>
     </aside>
 
@@ -56,15 +40,22 @@
 
     <!-- タイムライン -->
     <section class="timeline-wrap">
-      <div id="timeline" class="vertical-timeline empty">
-        <!-- 投稿カードがここに追加される -->
-      </div>
+      <div id="timeline" class="vertical-timeline empty"></div>
     </section>
   </main>
 
   <footer>
     <div class="copylight">inverted.triangle358 © 2025</div>
   </footer>
+
+  <!-- リレー一覧モダール -->
+  <div id="relayModal" class="modal">
+    <div class="modal-content">
+      <h2>接続リレー一覧</h2>
+      <div id="relayList"></div>
+      <button id="closeModal">閉じる</button>
+    </div>
+  </div>
 
   <script src="app.js"></script>
 </body>
