--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
   <header>
     <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
-<button id="btnRelayModal">リレー一覧</button>
+<button id="btnRelayModal">設定</button>
 <div id="relayModal" class="modal">
   <div class="modal-content">
-    <h2>リレー一覧</h2>
+    <h2>接続</h2>
     <div id="relayList"></div>
     <button id="btnAddRelay">リレー追加</button>
-    <button id="btnConnectModal">接続 & 購読</button>
+    <button id="btnConnectModal">購読</button>
     <button id="btnCloseModal">閉じる</button>
   </div>
 </div>
