--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="btnSubscribe">購読</button>
   </header>
 
-  <!-- リレー一覧モダール -->
+  <!-- モダール -->
   <div id="relayModal" class="modal">
     <div class="modal-content">
       <h2>接続リレー一覧</h2>
