--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="relayList"></div>
       <div class="modal-actions">
         <button id="btnAddRelay">リレー追加</button>
-        <button id="btnConnectModal">接続して購読</button>
+        <button id="btnConnectModal">接続</button>
         <button id="btnCloseModal">閉じる</button>
       </div>
     </div>
