--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
     <div class="header-actions">
       <button id="btnRelayModal">設定</button>
-      <button id="btnSubscribe">購読</button>
+　　　<button id="btnSubscribe">購読</button>
+　　　　<span id="subscribeSpinner" class="spinner" style="display:none;"></span>
     </div>
   </header>
 
