--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div class="header-actions">
       <button id="btnRelayModal">設定</button>
 　　　<button id="btnSubscribe">購読</button>
-　　　　<span id="subscribeSpinner" class="spinner" style="display:none;"></span>
+　　　　<span id="subscribeSpinner" style="display:none">⏳</span>
+
     </div>
   </header>
 
