--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <!-- モダール -->
   <div id="relayModal" class="modal" aria-hidden="true">
     <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="relayModalTitle">
-      <h2 id="relayModalTitle">接続リレー一覧</h2>
+      <h2 id="relayModalTitle">接続先一覧</h2>
       <div id="relayList"></div>
       <div class="modal-actions">
-        <button id="btnAddRelay">リレー追加</button>
+        <button id="btnAddRelay">新規追加</button>
         <button id="btnConnectModal">接続</button>
         <button id="btnCloseModal">閉じる</button>
       </div>
