--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <h2 id="relayModalTitle">接続先一覧</h2>
       <div id="relayList"></div>
       <div class="modal-actions">
-        <button id="btnAddRelay">新規追加</button>
-        <button id="btnConnectModal">接続</button>
-        <button id="btnCloseModal">閉じる</button>
+        <button id="btnAddRelay">追加</button>
+        <button id="btnConnectModal">保存</button>
+        <button id="btnCloseModal">閉</button>
       </div>
     </div>
   </div>
