--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
     <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="relayModalTitle">
       <h2 id="relayModalTitle">接続先一覧</h2>
       <div id="relayList"></div>
-      <div class="modal-actions">
-        <button id="btnAddRelay">追加</button>
-        <button id="btnConnectModal">保存</button>
-        <button id="btnCloseModal">閉</button>
+<div class="modal-actions">
+  <input id="relayInput" type="text" placeholder="wss://example.com" />
+  <button id="btnAddRelay">追加</button>
+  <button id="btnSaveRelays">保存</button>
+  <button id="btnCloseModal">閉</button>
+</div>
+
       </div>
     </div>
   </div>
