--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <header>
     <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
     <div class="header-actions">
-      <button id="btnRelayModal">設定</button>
+      <button id="btnRelayModal">接続</button>
       <span id="subscribeSpinner" style="display:none">⏳</span>
+      <button id="btnNgModal">禁句</button>
     </div>
   </header>
   <!-- モダール -->
