--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
       </div>
     </div>
   </div>
+  <!-- NGワード設定モーダル -->
+<div id="ngModal" class="modal" aria-hidden="true">
+  <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="ngModalTitle">
+    <h2 id="ngModalTitle">NGワード設定</h2>
+    <div id="ngWordList"></div>
+    <div class="modal-actions">
+      <input id="ngWordInput" type="text" placeholder="NGワードを追加" />
+      <button id="btnAddNgWord">追加</button>
+      <button id="btnSaveNgWords">保存</button>
+      <button id="btnCloseNgModal">閉</button>
+    </div>
+  </div>
+</div>
+
   <main>
     <!-- 投稿欄 -->
     <aside class="sidebar">
