--- a/index.html
+++ b/index.html
@@ -18,26 +18,24 @@
       <button id="btnNgModal">禁句</button>
     </div>
   </header>
-  <!-- モダール -->
-  <div id="relayModal" class="modal" aria-hidden="true">
-    <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="relayModalTitle">
-      <h2 id="relayModalTitle">接続先一覧</h2>
-      <div id="relayList"></div>
-<div class="modal-actions">
-  <input id="relayInput" type="text" placeholder="wss://example.com" />
-  <button id="btnAddRelay">追加</button>
-  <button id="btnSaveRelays">保存</button>
-  <button id="btnCloseModal">閉</button>
-</div>
-
-      </div>
+<!-- モダール -->
+<div id="relayModal" class="modal" aria-hidden="true">
+  <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="relayModalTitle">
+    <h2 id="relayModalTitle">接続先一覧</h2>
+    <div id="relayList"></div>
+    <div class="modal-actions">
+      <input id="relayInput" type="text" placeholder="wss://example.com" />
+      <button id="btnAddRelay">追加</button>
+      <button id="btnSaveRelays">保存</button>
+      <button id="btnCloseModal">閉</button>
     </div>
   </div>
-  <!-- NGワード設定モーダル -->
+</div>
+<!-- NGワード設定モーダル -->
 <div id="ngModal" class="modal" aria-hidden="true">
   <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="ngModalTitle">
     <h2 id="ngModalTitle">NGワード設定</h2>
-    <div id="ngWordList"></div>
+    <div id="ngWordList" class="scrollable-list"></div>
     <div class="modal-actions">
       <input id="ngWordInput" type="text" placeholder="NGワードを追加" />
       <button id="btnAddNgWord">追加</button>
@@ -46,7 +44,6 @@
     </div>
   </div>
 </div>
-
   <main>
     <!-- 投稿欄 -->
     <aside class="sidebar">
