--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
       <button id="btnAddNgWord">追加</button>
     </div>
 
-    <div class="modal-actions">
-      <button id="btnSaveNgWords">保存</button>
-      <button id="btnCloseNgModal">閉じる</button>
-    </div>
+   <div class="modal-actions">
+  <input id="relayInput" type="text" placeholder="wss://example.com" />
+  <div class="button-row">
+    <button id="btnAddRelay">追加</button>
+    <button id="btnSaveRelays">保存</button>
+    <button id="btnCloseModal">閉</button>
   </div>
-    </div>
+</div>
+
 
     <!-- 投稿欄 -->
     <aside class="sidebar">
