--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
       <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="relayModalTitle">
         <h2 id="relayModalTitle" tabindex="-1">接続先一覧</h2>
         <div id="relayList"></div>
-        <div class="modal-actions">
+
+        <!-- 入力欄＋追加ボタン -->
+        <div class="relay-add-area">
           <input id="relayInput" type="text" placeholder="wss://example.com" />
           <button id="btnAddRelay">追加</button>
+        </div>
+
+        <!-- 保存・閉じる -->
+        <div class="modal-actions">
           <button id="btnSaveRelays">保存</button>
           <button id="btnCloseModal">閉</button>
         </div>
@@ -36,24 +42,22 @@
 
     <!-- モダール: NGワード -->
     <div id="ngModal" class="modal">
-  <div class="modal-content">
-    <h2>NGワード設定</h2>
-    <div id="ngWordList" class="ng-list"></div>
+      <div class="modal-content">
+        <h2>NGワード設定</h2>
 
-    <div class="ng-add-area">
-      <input id="ngWordInput" type="text" placeholder="NGワードを追加">
-      <button id="btnAddNgWord">追加</button>
+        <div id="ngWordList" class="ng-list"></div>
+
+        <div class="ng-add-area">
+          <input id="ngWordInput" type="text" placeholder="NGワードを追加">
+          <button id="btnAddNgWord">追加</button>
+        </div>
+
+        <div class="modal-actions">
+          <button id="btnSaveNgWords">保存</button>
+          <button id="btnCloseNgModal">閉じる</button>
+        </div>
+      </div>
     </div>
-
-   <div class="modal-actions">
-  <input id="relayInput" type="text" placeholder="wss://example.com" />
-  <div class="button-row">
-    <button id="btnAddRelay">追加</button>
-    <button id="btnSaveRelays">保存</button>
-    <button id="btnCloseModal">閉</button>
-  </div>
-</div>
-
 
     <!-- 投稿欄 -->
     <aside class="sidebar">
