--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- 保存・閉じる -->
         <div class="modal-actions">
           <button id="btnSaveRelays">保存</button>
-          <button id="btnCloseModal">閉</button>
+          <button id="btnCloseModal">閉じる</button>
         </div>
       </div>
     </div>
