--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>野雨 - Nosame -</title>
+  <h1 class="sawarabi-mincho-regular title-ruby">
+  <ruby>
+    野雨<rt>-Nosame-</rt>
+  </ruby>
+</h1>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
