--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <h1 class="sawarabi-mincho-regular title-ruby">
-  <ruby>
-    野雨<rt>-Nosame-</rt>
-  </ruby>
-</h1>
+  <title>野雨 - Nosame -</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +11,11 @@
 </head>
 <body>
   <header>
-    <h1 class="sawarabi-mincho-regular">野雨 -Nosame-</h1>
+      <h1 class="sawarabi-mincho-regular title-ruby">
+  <ruby>
+    野雨<rt>-Nosame-</rt>
+  </ruby>
+</h1>
     <div class="header-actions">
       <button id="btnRelayModal">接続</button>
       <span id="subscribeSpinner" style="display:none">⏳</span>
