--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- 投稿欄 -->
     <aside class="sidebar">
       <div class="sidebar-header">
-        <button id="btnPublish" aria-label="投稿を送信">投稿する</button>
+        <button id="btnPublish" aria-label="投稿を送信">✍</button>
       </div>
       <div class="composer">
         <textarea id="compose" placeholder="本文を入力......"></textarea>
